--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: auth
 
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?client_encoding=LATIN1
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+
 cors:
   allowed-origins: "http://localhost:4200"
 
